Revision history for {{ $dist->name }}

{{$NEXT}}
  [Tests]
  - Fixed test that used Const::Exporter.

v0.1.1    2020-12-16 21:28:48+00:00 Europe/London
  [Tests]
  - Added recommended prereqs.

  - Fixed test that was supposed to skip when Const::Fast::Exporter
    was not installed.

  [Other]
  - Fixed incorrect keywords in distribution metadata.

v0.1.0    2020-12-16 17:45:07+00:00 Europe/London
  - Initial version released.