@@ -9,6 +9,7 @@ requires "MooX::Options" => "0";
 requires "Package::Stash" => "0";
 requires "Path::Tiny" => "0";
 requires "Ref::Util" => "0";
+requires "Sub::Identify" => "0";
 requires "Try::Tiny" => "0";
 requires "Types::Common::String" => "0";
 requires "Types::Standard" => "0";
